# LifeLog

./: .gitignore  AGENTS.md  README.md  cli.py  main.py  pyproject.toml  requirements.txt  storage.py  task.py  task_manager.py
.github/workflows/: python.yml
LifeLog/: __init__.py  cli.py  log.py  manager.py  storage.py  task_manager.py
lifelog/: cli.py  config.py  exceptions.py  log.py  manager.py  sqlite.py  storage.py  task.py
tests/: conftest.py  fake_data.json  fake_storage.py  test_cli.py  test_config.py  test_log.py  test_manager.py  test_storage.py  test_task.py  test_task_manager.py
