[project]
name = "lifelog"
version = "0.1.0"
description = "A simple task manager and life logging project"
requires-python = ">=3.13"

[project.scripts]
lifelog = "lifelog.__main__:main"

[tool.ruff]
line-length = 88
target-version = "py313"


[tool.ruff.lint]
select = [
    "E",
    "F",
    "I"
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
